--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    padding: 20px;
+    padding: 10px 20px 20px;
     font-family: Consolas, sans-serif;
     min-width: 400px;
 
