--- a/todo.css
+++ b/todo.css
@@ -7,11 +7,14 @@ body{
 
     color: black;
     font-family: "Poppins", sans-serif;
-    min-height: 100vh;
+    /* min-height: 100vh; */
 }
 header{
     font-size: 1.5rem;
     
+}
+li{
+    list-style: none;
 }
 a{
     text-decoration: none;
@@ -23,11 +26,12 @@ header, form{
     align-items: center;
 }
 
-form input, form button{
+form .todo-input, form button{
     padding: 0.5rem;
     font-size: 2rem;
     border: none;
     background: rgb(217, 216, 216);
+    margin: 0;
 }
 form button{
     color: #d88771;
@@ -129,29 +133,7 @@ select{
 
 .section {
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     position: relative;
   }
-/* Navbar */
-.navbar {
-    position: absolute;
-    right: 5%;
-  }
-  
-  .navbar-link {
-    font-size: 1.5rem;
-    display: inline-block;
-    margin: 0 3rem;
-    color: #5f9341;
-    transition: transform 0.5s;
-  }
-  
-  .navbar-link:hover {
-    transform: scale(1.5);
-  }
-  /* End of Navbar */
-  @media screen and (max-width: 800px){
- header{
-    margin-top: 5px;
- }
-}
+
