--- a/weather.css
+++ b/weather.css
@@ -16,10 +16,12 @@
 body {
     background-position: center;
     background-repeat: no-repeat;
+    min-height: 80vh !important;
+    overflow: hidden !important;
 
     /* justify-content: center; */
     margin: 0;
-    padding: 10px 20px 20px;
+    padding: 30px 20px 20px;
     font-family: Consolas, sans-serif;
     min-width: 400px;
 
@@ -32,8 +34,10 @@ li{
     display: flex;
 
     justify-content: space-around;
-    background-color: #0a192f92;
+    background-color: #ccdcf692;
     padding: 20px 0;
+    border-radius: 15px;
+    margin-bottom: 20px;
 
     /* padding: 0px auto; */
 }
@@ -62,12 +66,14 @@ span {
     color: #64ffda;
 }
 .card{
-    background-color: #0a192f92;
+    background-color: #a1b3cc92;
     padding: 1em 2em;
     border-radius: 25px;
     width: 100%;
     max-width: 420px;
-    margin: 1em;
+    margin: 10px auto 160px !important;
+    /* margin-bottom: 400px; */
+    overflow: hidden;
 }
 .search{
     display: flex;
@@ -81,7 +87,7 @@ button{
     height: 44px;
     width: 44px;
     font-size: 20px;
-    background-color: #7c7c7cb5;
+    background-color: #bdbcbcb5;
     color: #64ffda;
     transition: all .2s ease-in-out;
 }
@@ -93,7 +99,7 @@ input{
     border: none;
     outline: none;
     padding: .45em 1em;
-    background-color: #7c7c7c8b;
+    background-color: #c7c4c48b;
     border-radius:24px;
     color: #64ffda;
     font-family: inherit;
