--- a/hex.css
+++ b/hex.css
@@ -86,23 +86,6 @@ h2
   font-size: 2rem;
 }
 
-
-
-
-
-
-
-/*  global classes */
-
-
-
-
-/*
-=============== 
-Nav
-===============
-*/
-
 /*
 =============== 
 Container
@@ -123,7 +106,7 @@ main {
   border-radius: var(--radius);
   margin-bottom: 2.5rem;
 }
-.color {
+#color {
   color: var(--clr-primary-5);
 }
 .btn-hero {
@@ -146,3 +129,26 @@ main {
   color: var(--clr-white);
   background: var(--clr-black);
 }
+@media screen and (max-width: 400px) {
+
+  h2 {
+    font-size: 1rem;
+    line-height: 1;
+  }
+
+
+ .btn-hero{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column;
+  margin: 5px 0;
+  width: 360px;
+  height: 50px;
+ }
+}
+.col{
+  display: flex;
+  justify-content: space-between;
+}
+  
