--- a/hex.css
+++ b/hex.css
@@ -117,19 +117,17 @@ main {
   text-align: center;
 }
 .container h2 {
+  width: 80%;
   background: var(--clr-black);
   color: var(--clr-white);
   padding: 4rem 3rem;
   border-radius: 10px;
-  margin: 1.5rem auto;
-  font-size: 20px;
+  margin: 2rem auto;
+  font-size: 30px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-}
-.color {
   letter-spacing: 1.2;
   font-weight: bolder;
   font-size: 25px;
-  color: var(--clr-primary-5);
 }
 .btn-hero{
   font-family: var(--ff-primary);
@@ -148,8 +146,14 @@ main {
   padding: 0.75rem 5rem;
   width: 80%;
   margin: 0 auto 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 .btn-hero:hover {
   color: var(--clr-white);
   background: var(--clr-black);
+}
+
+#hex-container{
+  width: 80%;
+  margin: 2rem auto;
 }
